AUTO-2240
Fixed Account Entitiy swagger doc
